# DmslRunner

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  program.dmsl
Dmsl/: DMSLVM.cpp  DataActor.cpp  Dmsl.h
compiler/: CMakeLists.txt  program.dmsl
compiler/Dmsl/: DMSLCompiler.h  DMSLVM.cpp
dmsl-container/dmsl/latest/: Dockerfile  bulid.bat
dmsl-container/dmsl/latest/tests/hello_world/: payload.json  test.txt
dmsl-runner/: main.py  runner.go
dmsl-runner/language/: language.go
dmsl-runner/language/dmsl/: dmsl.go
test/: test.dmsl
